--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "format": "prettier . --write",
     "format:check": "prettier . --check",
-    "prepare": "husky"
+    "prepare": "husky",
+    "pre-commit": "prettier . --check && next lint"
   },
   "dependencies": {
     "@types/node": "^20",
@@ -27,8 +28,8 @@
     "eslint-config-next": "14.2.1",
     "eslint-config-prettier": "9.1.0",
     "husky": "9.0.11",
-    "lint-staged": "15.2.2",
     "postcss": "^8",
-    "prettier": "3.2.5"
+    "prettier": "3.2.5",
+    "prettier-plugin-tailwindcss": "0.5.13"
   }
 }
